--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -42,7 +42,7 @@
 
     <input type="search"
         placeholder="Filter contacts..."
-        ng-model="search">
+        ng-model="search" class="text-center">
 
   		<ion-list show-delete="data.showDelete" show-reorder="data.showReorder">
 
