--- a/www/css/style.css
+++ b/www/css/style.css
@@ -601,3 +601,13 @@ ion-side-menu.menu.menu-left.active {
 img.profileLogo {
     margin: 10%;
 }
+
+
+
+/*ionicPopupSpinner*/
+.ionicPopupSpinner{
+  width: 40px;
+  height: 40px;
+  stroke: #444;
+  fill: #444;
+}
