--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,12 +1,32 @@
-<ion-view view-title="Home">
+<ion-view view-title="Home" class="animated zoomIn">
   <ion-content>
     
-    <div class="list list-inset searchhead">
+    <!-- <div class="list list-inset searchhead">
       <label class="item item-input">
         <i class="icon ion-search placeholder-icon"></i>
         <input type="text" placeholder="Search" ng-keypress="searchfun($event)">
       </label>
-    </div>
+    </div> -->
+
+    <!-- List of Invitations -->
+    <ion-list>
+      <div class="item item-divider">
+        A friend(s) invited you,
+      </div>
+    </ion-list>
+    <ion-list>
+      <div ng-repeat = "i in invitations">
+        <ion-item class="item item-avatar item-icon-right" ng-click="acceptInvitation('{{i.friendID}}','{{i.friendContact}}','{{i.name}}','{{i.iid}}')">
+          
+          <img src="{{i.pic}}" width="30" height="30">
+          {{i.name}}
+          <i class="icon ion-shuffle"></i>
+        </ion-item>
+      </div>
+    </ion-list>
+
+
+
     <div class="list divimageerror" style="display: block;" ng-show="showbestiese">
       <img src="img/error2.png" class="error2 animated fadeInUp rubbferBand">
       <img src="img/error1.png" class="error1 animated fadeIn">
