--- a/www/templates/tabs/home.html
+++ b/www/templates/tabs/home.html
@@ -1,12 +1,17 @@
-<ion-view view-title="Home">
+<ion-view view-title="Home" class="animated zoomIn">
   <ion-content>
     
-    <div class="list list-inset searchhead">
+    <!-- <div class="list list-inset searchhead">
       <label class="item item-input">
         <i class="icon ion-search placeholder-icon"></i>
         <input type="text" placeholder="Search" ng-keypress="searchfun($event)">
       </label>
-    </div>
+    </div> -->
+
+
+
+
+
     <div class="list divimageerror" style="display: block;" ng-show="showbestiese">
       <img src="img/error2.png" class="error2 animated fadeInUp rubbferBand">
       <img src="img/error1.png" class="error1 animated fadeIn">
@@ -15,6 +20,10 @@
 
       
   <div ng-show="showbestiesview" ng-repeat="b in showbesties">
+    <ion-refresher
+      pulling-text="Finding more besties..."
+      on-refresh="doRefresh()" pulling-icon="ion-android-hand" refreshing-icon="ion-android-people">
+    </ion-refresher>
     <div class="list card cardcc">
 
       <div class="row">
@@ -93,7 +102,7 @@
     <button  class="round-overlay-button bottom-right assertive button button-icon icon ion-ios7-search-strong light"></button>
     </div> -->
     </ion-content>
-  <ion-footer-bar class="bar bar-positive">
+  <!-- <ion-footer-bar class="bar bar-positive">
       <button class="button button-clear pull-right" style="width: 100%" ng-click="findmore()">Find More</button>
-  </ion-footer-bar>
+  </ion-footer-bar> -->
 </ion-view>
