--- a/www/templates/tabs/invitation.html
+++ b/www/templates/tabs/invitation.html
@@ -1,6 +1,26 @@
 <ion-view view-title="Invitation">
 <ion-content>
-          <p>@IonicFrameworkhi invited</p>
-          <p>@DriftyCo</p>
-        </ion-content>
+	<ion-list>
+      <div class="item item-divider">
+        A <i class="icon ion-android-people"></i> friend(s) invited you,
+      </div>
+    </ion-list>
+
+	<div class="list divimageerror" style="display: block;" ng-show="noInvitation">
+      <img src="img/error2.png" class="error2 animated fadeInUp rubbferBand">
+      <img src="img/error1.png" class="error1 animated fadeIn">
+    </div>
+              <!-- List of Invitations -->
+    
+    <ion-list>
+      <div ng-repeat = "i in invitations">
+        <ion-item class="item item-avatar item-icon-right" ng-click="acceptInvitation('{{i.friendID}}','{{i.friendContact}}','{{i.name}}','{{i.iid}}')">
+          
+          <img src="{{i.pic}}" width="30" height="30">
+          {{i.name}}
+          <i class="icon ion-shuffle"></i>
+        </ion-item>
+      </div>
+    </ion-list>
+</ion-content>
 </ion-view>
