--- a/www/templates/tabs/lastmeet.html
+++ b/www/templates/tabs/lastmeet.html
@@ -1,7 +1,27 @@
 <ion-view view-title="Last Meet">
-
 <ion-content>
-          <p>@IonicFramework</p>
-          <p>@DriftyCohi lastmeet</p>
-        </ion-content>
+              <!-- List of Invitations -->
+    <ion-list>
+      <div class="item item-divider">
+        A Last Meet with <i class="icon ion-android-people"></i> besties,
+      </div>
+    </ion-list>
+
+    <div class="list divimageerror" style="display: block;" ng-show="noLastMeet">
+      <img src="img/error2.png" class="error2 animated fadeInUp rubbferBand">
+      <img src="img/error1.png" class="error1 animated fadeIn">
+    </div>
+
+    <ion-list>
+      <div ng-repeat = "i in lastmeet">
+        <ion-item class="item item-avatar item-icon-right" ng-click="acceptInvitation('{{i.friendID}}','{{i.friendContact}}','{{i.name}}','{{i.iid}}')">
+          
+          <img src="{{i.pic}}" width="30" height="30">
+          {{i.name}}<br>
+          <p> {{i.eventName}} {{i.at}}</p>
+          <i class="icon ion-android-happy"></i>
+        </ion-item>
+      </div>
+    </ion-list>
+</ion-content>
 </ion-view>
