--- a/www/templates/tabs/tab.html
+++ b/www/templates/tabs/tab.html
@@ -1,4 +1,22 @@
-<ion-view view-title="Home">
+<ion-tabs class="tabs-icon-top tabs-striped tabs-color-royal tabs-color-light">
+
+   	 
+
+    	<ion-tab title="Home" icon="ion-arrow-shrink" ui-sref="app.home.room">
+      	<ion-nav-view name="home-tab"></ion-nav-view>
+    	</ion-tab>
+
+    	<ion-tab title="Invitation" icon="ion-wand" ui-sref="app.home.invitation">
+      	<ion-nav-view name="invitation-tab"></ion-nav-view>
+    	</ion-tab>
+    
+    	<ion-tab title="Last Meet" icon="ion-android-wifi" ui-sref="app.home.lastmeet">
+      	<ion-nav-view name="lastmeet-tab"></ion-nav-view>
+    	</ion-tab>
+
+</ion-tabs>
+
+<!-- <ion-view view-title="Home">
   
  <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
@@ -22,3 +40,4 @@
 </ion-tabs>
 
 </ion-view>
+ -->
