--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -21,6 +21,31 @@
       <div class="list">
 
         <div class="item item-divider">
+          Pending connected besties,
+          <span class="icon ion-person-stalker"></span>
+        </div>
+        <div>
+         <div class="row">
+           <div class="col col-20">
+            <img src="img/ionic.png" width="60" height="60">   
+           </div>
+           <div class="col col-60">
+             <h6>Venkman</h6>
+             <p>Back off, man. I'm a scientist.</p>
+           </div>
+           <div class="col col-20">
+             <i class="icon ion-android-done-all"  style="float: right;top: 0;right: 0;margin: 12%;font-size:28px;color: red;"></i>
+           </div>
+         </div>
+        </div>   
+        
+
+      </div>
+      
+
+      <div class="list">
+
+        <div class="item item-divider">
           My besties 
           <span class="icon ion-person-stalker"></span>
         </div>
@@ -48,7 +73,7 @@
             <p><span class="icon ion-android-call"></span> {{list.contact}}</p>
           </div>
           <div class="col col-20">
-            <i class="icon ion-ios-color-filter" style="float: right;top: 0;right: 0;margin: 12%;font-size:28px;color: red;"></i>
+            <i class="icon ion-ios-color-filter" style="float: right;top: 0;right: 0;margin: 12%;font-size:28px;color: green;"></i>
           </div>
         </div>
         <!-- <div class="row">
