--- a/www/templates/viewbesties.html
+++ b/www/templates/viewbesties.html
@@ -3,11 +3,11 @@
     
     <div class="row">
         <div class="col colviewbestiesimage">
-            <img src="img/ionic.png" class="item-avatar animated fadeIn">
+            <img src="{{pic}}" class=" animated fadeIn" width="100" height="100">
         </div>
         <div class="col colviewbestiesname">
         	<h2><b>{{name}}</b> {{name}} </h2>
-            <p>2m ago, November 05, 1955</p>
+            <p>Last Viewed @ {{last}}</p>
             <div ng-click="navigatethis('{{id}}')"><h3><span class="icon ion-location navigatelocationview animated fadeIn"></span></h3></div>
         </div>
     </div>
@@ -39,14 +39,14 @@
     </div>
     <div class="row">
       <div class="col">
-        <span class="icon ion-location"></span> 23 Dec, 1999 at Kurla Phoneix Mall.
+        <span class="icon ion-location"></span> {{meetdate}} {{'at'+meetaddress}}
       </div>
     </div><br><br>
-    <div class="card">
+    <!-- <div class="card">
 	    <div class="item item-text-wrap cardnotmeet">
 	      No besties founded ago 28 days.
 	    </div>
-	</div>
+	  </div> -->
 
   </ion-content>
 </ion-view>
