--- a/www/css/style.css
+++ b/www/css/style.css
@@ -208,6 +208,7 @@ border-color: transparent;
   background-color:#222446;/*#699cfa;*/
 }
 .constColor2 {
+  color: #fff;
   background-color:#323569;/*#699cfa;*/
 }
 
