--- a/www/templates/allmeetsmodel.html
+++ b/www/templates/allmeetsmodel.html
@@ -1,18 +1,20 @@
 <ion-modal-view>
-    <ion-header-bar class="constColor">
+    <!-- <ion-header-bar class="constColor">
       <h1 class="title">My Modal title</h1>
-    </ion-header-bar>
+    </ion-header-bar> -->
     <ion-content>
-      	<div class="row">
+    	<div class="meetmodelarrow"><i class="icon ion-arrow-left-c" ng-click="closeModal()"></i></div>
+    	<img src="{{pic}}" class="item-avatar animated fadeIn meetmodelimage" style="width: 100%;height: 80%;text-align: center;">
+      	<!-- <div class="row">
 	        <div class="col col-100 colviewbestiesimagemodel">
 	            <img src="img/ionic.png" class="item-avatar animated fadeIn">
 	        </div>
-	    </div>
+	    </div> -->
 	    <div class="row">
 	    	<div class="col colviewbestiesnamemodel">
-	        	<h2><b>{{'pname'}}</b> </h2>
-	            <p>2m ago, November 05, 1955</p>
-	            <h3><span class="icon ion-location navigatelocationview animated fadeIn"></span></h3>
+	        	<h2><b>{{uname}}</b> </h2>
+	            <p>{{created}}</p>
+	            <!-- <h3><span class="icon ion-location navigatelocationview animated fadeIn"></span></h3> -->
 	        </div>
 	    </div>
 
@@ -25,17 +27,19 @@
 	    </div>
 	    <div class="row">
 	      <div class="col">
-	        P Name<br>
-	        Member Since, Aug 19 ,1980
+	        {{uname}}<br>
+	        Member Since, {{created}}
 	      </div>
 	    </div>
 	    
 	    <div class="list">
 	      <div class="item item-divider">
-	        <p><b>Last Meet</b></p>
+	        <p><b>Contact Detail</b></p>
 	      </div>
+	      <h5>{{ucontact}}</h5><br>
+	      <h6>{{email}}</h6>
 	    </div>
-	    <div class="row">
+	    <!-- <div class="row">
 	      <div class="col">
 	        <span class="icon ion-location"></span> 23 Dec, 1999 at Kurla Phoneix Mall.
 	      </div>
@@ -44,6 +48,6 @@
 		    <div class="item item-text-wrap cardnotmeet">
 		      No besties founded ago 28 days.
 		    </div>
-		</div>
+		</div> -->
     </ion-content>
 </ion-modal-view>
