--- a/www/templates/allmeets.html
+++ b/www/templates/allmeets.html
@@ -1,7 +1,23 @@
 <ion-view view-title="My Meets">
   	<ion-content>
     	
-    	<div class="list list-inset">
+    	<div class="list divimageerror" style="display: block;" ng-show="noLastMeet">
+	      <img src="img/error2.png" class="error2 animated fadeInUp rubbferBand">
+	      <img src="img/error1.png" class="error1 animated fadeIn">
+	    </div>
+
+	    <ion-list>
+	      <div ng-repeat = "i in lastmeet">
+	        <ion-item class="item item-avatar item-icon-right" ng-click="seeBesties('{{i.friendID}}','{{i.friendContact}}','{{i.name}}','{{i.iid}}')">
+	          
+	          <img src="{{i.pic}}" width="30" height="30">
+	          {{i.name}}<br>
+	          <p> {{i.eventName}} {{i.at}}</p>
+	          <i class="icon ion-android-happy"></i>
+	        </ion-item>
+	      </div>
+	    </ion-list>
+    	<!-- <div class="list list-inset">
 	      <label class="item item-input">
 	        <i class="icon ion-search placeholder-icon"></i>
 	        <input type="text" placeholder="Filter" ng-keyup="searchfun($event)">
@@ -35,6 +51,6 @@
 		      <h2>Venkman</h2>
 		      <p>Back off, man. I'm a scientist.</p>
 		    </a>
-		</div>		
+		</div>		 -->
     </ion-content>
 </ion-view>
