--- a/www/templates/abstractpages/sidemenus.html
+++ b/www/templates/abstractpages/sidemenus.html
@@ -33,7 +33,7 @@
         
         <a href="#/app/home" class="item constColor" menu-close style="color: #ffffff"><span class="icon ion-home"></span>&nbsp;&nbsp;Home</a>
         <a href="#/app/searchfriends" class="item constColor" style="color: #ffffff" menu-close><span class="icon ion-ios-search-strong"></span>&nbsp;&nbsp;Search Friends</a>
-        <a href="#/app/nearby" class="item constColor" style="color: #ffffff" menu-close><span class="icon ion-android-people"></span>&nbsp;&nbsp;Near By Friends</a>
+        <!-- <a href="#/app/nearby" class="item constColor" style="color: #ffffff" menu-close><span class="icon ion-android-people"></span>&nbsp;&nbsp;Near By Friends</a> -->
         <a href="#/app/contacts" class="item constColor" style="color: #ffffff" menu-close><span class="icon ion-android-list"></span>&nbsp;&nbsp;Contacts</a>
         <a href="#/app/allmeets" class="item constColor" style="color: #ffffff" menu-close><span class="icon ion-social-freebsd-devil"></span>&nbsp;&nbsp;All Meets</a>
         <a href="#/app/profile" class="item constColor" style="color: #ffffff" menu-close><span class="icon ion-person"></span>&nbsp;&nbsp;Me</a>
